Added context window for app crashes
- Added simple context window that displays an error message and terminates the program
- Added origin-offsetting for the renderer to counteract size changes of the canvas
- Switched from 'onDragEnd' to 'onDrag' as split.js callback for a smoother experience when resizing the editor

--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ html, body {
 
 }
 /********************************************************************************************************************/
-/*Console-Text*/
+/*Console-Text prperties*/
 
 .console-error-msg {
   color: #d54e45;
@@ -116,6 +116,10 @@ html, body {
 
 #editor {
   overflow: hidden;
+  height: inherit;
+  width: -webkit-fill-available;
+  margin: 0;
+  padding: 0;
 }
 
 #toolbar {
