--- a/main.css
+++ b/main.css
@@ -101,11 +101,17 @@ html, body {
 
 .collapsible-icon {
     float: right;
+    height: 1em;
+    width: 1em;
+    margin-top: 0.2em;
     transform: rotate(270deg);
 }
 
 .collapsible-icon-active {
     float: right;
+    height: 1.1em;
+    width: 1em;
+    margin-top: 0.2em;
     transform: rotate(0deg);
 }
 
