--- a/main.css
+++ b/main.css
@@ -183,3 +183,80 @@ html, body {
     float: left;
   }
 /********************************************************************************************************************/
+/* Color Picker Classes */
+.ui-colorpicker-picker {
+  background-color: #21252b;
+}
+
+.ui-colorpicker-spacer {
+  display: block;
+}
+
+.ui-colorpicker-slider {
+  -webkit-appearance: none;
+  width: 122px;
+  height: 5px;
+  border-radius: 5px;
+  background: #4b5362;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.ui-colorpicker-slider:hover {
+  opacity: 1;
+}
+
+.ui-colorpicker-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 11px;
+    height: 11px;
+    border-radius: 50%;
+    background: #74def1;
+    cursor: pointer;
+}
+
+input[type="number"].ui-colorpicker-box::-webkit-inner-spin-button,
+input[type="number"].ui-colorpicker-box::-webkit-outer-spin-button {
+   opacity: 1;
+  -webkit-appearance: none;
+   background: #21252b url("./icons/spinner_icon.png") no-repeat center center;
+   width: 1em;
+   position: absolute;
+   top: 0;
+   right: 0;
+   bottom: 0;
+}
+
+.x-field-select .x-component-outer::after {
+background-color: #74def1;
+z-index: 2;
+}
+
+.ui-colorpicker-box::-webkit-inner-spin-button:hover,
+.ui-colorpicker-box::-webkit-inner-spin-button:active{
+    /*opacity: .8;*/
+}
+
+
+.ui-colorpicker-box {
+  width: 40px;
+  background-color: inherit;
+  color: inherit;
+  border-style: solid;
+  border-color: #21252b;
+  -webkit-box-shadow: none;
+}
+
+.ui-colorpicker-wrapper {
+  padding-left: 13px;
+}
+
+.ui-colorpicker-prev {
+  height: 20px;
+  width: 170px;
+  margin-bottom: 5px;
+  margin-left: 13px;
+}
