--- a/main.css
+++ b/main.css
@@ -8,6 +8,14 @@
   color: #abb2bf;
 }
 
+:not(input):not(textarea),
+:not(input):not(textarea)::after,
+:not(input):not(textarea)::before {
+    -webkit-user-select: none;
+    user-select: none;
+    cursor: default;
+}
+
 .UIScale h1 {
 	font-size: 110%;
 }
@@ -325,9 +333,9 @@ input[type="number"].ui-colorpicker-box::-webkit-outer-spin-button
 }
 #tools-wrapper{
   overflow: hidden;
-  max-height: 60px;
-  max-width: 50%;
-  display: inline;
+  height: 60px;
+  width: 50%;
+  display: inline-block;
   margin: 0px;
 }
 
@@ -402,36 +410,62 @@ input[type="number"].ui-colorpicker-box::-webkit-outer-spin-button
 
 /********************************************************************************************************************/
 
-.ToolbarStatus-wrapper{
-  width:200px;
+#ToolbarStatus-wrapper{
+  max-width:40%;
   float:right;
-  margin: 18px;
-  display: inline;
+  display: inline-block;
   overflow: visible;
+}
 
-}
-.gridFieldDiv{
-  float: right;
-}
 .positionFieldDiv{
   float: right;
+  margin-top: 25px;
+  margin-left: 15px;
+}
+
+
+.gridFieldDiv{
+  float: right;
+  margin-top: 23px;
+  margin-left: 15px;
+
+}
+
+#gridButton{
+  background-color:  #21252b; /* dark Gray background */
+  border: none; /* Remove borders */
+
+  outline:0;  /*no automatic border*/
+  padding: 3px 3px; /* Some padding */
+  font-size: 15px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+}
+
+#gridsize{
+  cursor: pointer;
 }
 
 .toolbarDropdown {
     position: relative;
     float:right;
+    height: 37px;
     display: inline-block;
-    margin: auto;
+    margin-top: 25px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .toolbarDropdown-content {
     display: none;
     position: absolute;
-    right: 20px;
-    top: 20px;
-    z-index: 99;
-    background-color: #f9f9f9;
     min-width: 16px;
+    right: -18px;
+    top: 35px;
+    background-color: #21252b;
+
+    border-left: 1px solid #131416;
+    border-bottom: 1px solid #131416;
+    border-top: 1px solid #131416;
 
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
@@ -440,4 +474,14 @@ input[type="number"].ui-colorpicker-box::-webkit-outer-spin-button
 
 .toolbarDropdown:hover .toolbarDropdown-content {
     display: block;
+}
+
+.gridDropdownButton{
+  background-color:  #21252b; /* dark Gray background */
+  border: none; /* Remove borders */
+
+  outline:0;  /*no automatic border*/
+  padding: 3px 3px; /* Some padding */
+  font-size: 15px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
 }
