--- a/main.css
+++ b/main.css
@@ -470,3 +470,44 @@ input[type=number].ui-colorpicker-box::-webkit-inner-spin-button:active {
   font-size: 15px; /* Set a font size */
   cursor: pointer; /* Mouse pointer on hover */
 }
+
+/********************************************************************************************************************/
+
+#panelLegHolder {
+  margin-left: 20px;
+  display:block;
+  background-color: #21252b;
+}
+
+.panelLegParagraph {
+  padding: 3px !important;
+  margin: 0px;
+}
+
+.panelLegTree-icon {
+    float: left;
+    height: 1em;
+    width: 1em;
+    margin-top: 0.2em;
+    transform: rotate(270deg);
+}
+
+.panelLegPanel {
+  background-color: #21252b;
+  color: #abb2bf;
+  font-size: 15px;
+  cursor: pointer;
+  padding: 5px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  border-radius: 2px;
+  margin-left: 10px;
+  display: block;
+}
+
+
+
+
+/**/
